--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body, html {
  margin:auto;
  display:block;
- width:85%;
+ width:960px;
 }
 
 header {
@@ -23,10 +23,8 @@ header {
   height:100%;
   width:42px;
   float:left;
-  /* background-color:blue; */
 }
 #logo {
-  /* vertical-align: middle; */
   position: relative; top:49px;
   display: inline;
 }
@@ -44,7 +42,6 @@ header {
   font-size:.7em;
 }
 
-
 .links {
   width:30%;
   height:100%;
@@ -61,12 +58,10 @@ header {
 #infonav {
   margin-left:5px;
   padding-left: 5px;
-  /* background-color: aqua */
 }
 
-#socialnav {
-  /* background-color: blueviolet */
-}
+/* #socialnav {
+} */
 
 .postbanner h2 {
   font-family: 'Oswald', sans-serif;
@@ -118,6 +113,32 @@ header {
 .instructions p {
   padding-top:12.5px;
   padding-bottom:12.5px;
+}
+
+section.ingredients img {
+  margin-top: 12.5px;
+  position: relative;
+  width: 960px;
+}
+
+.ingredients div {
+  font-family: 'IBM Plex Serif', serif;
+  color: rgb(80,80,80);
+  font-size:1.12em;
+}
+
+.ingredients div#recipieL {
+  position: absolute;
+  top: 1325px; left: 220px;
+}
+
+.ingredients div#recipieR {
+  position: absolute;
+  top: 1325px; left: 650px;
+}
+
+.ingredients li {
+  margin-bottom: 15px;
 }
 
 .strikethrough:checked + .strikeThis {
