--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-body, html {
- margin:auto;
- display:block;
- width:960px;
+body {
+ margin: auto;
+ display: block;
+ width: 960px;
 }
 
 header {
@@ -113,7 +113,11 @@ header {
   padding-bottom:12.5px;
 }
 
-section.ingredients img {
+.ingredients {
+  height: 400px;
+}
+
+.ingredients img {
   border-bottom: 12px outset rgb(214, 211, 211);
   margin: 30px 0;
   padding-bottom: 30px;
@@ -152,6 +156,12 @@ section.ingredients img {
   text-decoration: line-through
 }
 
+.author {
+  height: 75px;
+  margin-top: 30px;
+  overflow: hidden;
+}
+
 .author #vanpic {
   float: left;
 }
@@ -166,10 +176,44 @@ section.ingredients img {
 
 .author .author-info h3 {
   font-size: 20px;
+  font-weight: bold;
   margin-bottom: 10px;
 }
 
 .author .author-info p {
   font-size: 16px;
+  line-height: 20px;
 }
 
+.author #SRB {
+  color: rgb(253, 253, 253);
+  background-color: rgb(202, 96, 96);
+  float: right;
+  font-family: 'Oswald', sans-serif;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+}
+
+footer {
+  color:rgb(204, 204, 204);
+  margin-top: 3em;
+  position:relative;
+  text-align:center;
+}
+
+footer img {
+  border-left: 10px solid white;
+  border-right: 10px solid white;
+  margin-bottom: 20px;
+}
+
+footer:before {
+  border-top: 1px solid  rgb(204, 204, 204);
+  content: "";
+  width: 100%;
+  position: absolute;
+  top: 15px;
+  left: 0px;
+  z-index: -1;
+}
