--- a/css/style.css
+++ b/css/style.css
@@ -42,24 +42,26 @@ header {
 }
 
 .links {
-  width:30%;
   height:100%;
   float:right;
   position: relative; top:55px;
 }
 
-.links li {
-  float:right;
-  padding: 2px;
+nav.links {
+  float: right;
 }
 
-#infonav {
-  margin-left:5px;
-  padding-left: 5px;
+#socialnav ul {
+  margin-left: 20px;
+}
+#socialnav li {
+  display: inline-block;
+  padding-left: 2px;
 }
 
-/* #socialnav {
-} */
+.infonav img {
+  margin-left: 5px;
+}
 
 .postbanner h2 {
   font-family: 'Oswald', sans-serif;
@@ -76,7 +78,6 @@ header {
   margin-top:.8em;
   width:100%;
   overflow:hidden;
-
 }
 
 #timestamp{
@@ -88,6 +89,10 @@ header {
   float:right;
   width:20%;
   text-align:right;
+}
+
+#ipittytheprinta img {
+  margin-right: 2px;
 }
 
 #print {
@@ -121,7 +126,6 @@ header {
   border-bottom: 12px outset rgb(214, 211, 211);
   margin: 30px 0;
   padding-bottom: 30px;
-  /* position: relative; */
   width: 960px;
 }
 
